deploy: 8793ad80f2ce5e2ecaeb269dddfa8e8b64559124

--- a/dev-install-virtualbox.html
+++ b/dev-install-virtualbox.html
@@ -167,7 +167,7 @@
 <p>VirtualBox是功能强大的x86和AMD64 / Intel64虚拟化产品，适用于企业和家庭使用。VirtualBox不仅是面向企业客户的功能极为丰富的高性能产品，而且还是根据GNU通用公共许可证（GPL）版本2的条款可作为开源软件免费提供的唯一专业解决方案。</p>
 <h2><a class="header" href="#install" id="install">install</a></h2>
 <blockquote>
-<p>https://www.virtualbox.org/</p>
+<p>For more information, see <a href="https://www.virtualbox.org/">https://www.virtualbox.org/</a></p>
 </blockquote>
 <h2><a class="header" href="#ref" id="ref">ref</a></h2>
 <ul>
