--- a/dev-tools.html
+++ b/dev-tools.html
@@ -165,18 +165,18 @@
                     <main>
                         <h1><a class="header" href="#环境搭建" id="环境搭建">环境搭建</a></h1>
 <table><thead><tr><th>工具</th><th>说明</th><th>官网</th></tr></thead><tbody>
-<tr><td>Debian</td><td>buster</td><td>https://debian.org</td></tr>
-<tr><td>VirtualBox</td><td>6.1</td><td>https://www.virtualbox.org</td></tr>
-<tr><td>Eclipse</td><td>2020-12 (4.18.0)</td><td>https://eclipse.org</td></tr>
-<tr><td>Vscode</td><td>1.52</td><td>https://code.visualstudio.com</td></tr>
-<tr><td>AdoptOpenJDK</td><td>hotspot_8u275b01</td><td>https://github.com/AdoptOpenJDK</td></tr>
-<tr><td>Node.js</td><td>^=14.15.1</td><td>http://nodejs.org</td></tr>
-<tr><td>Maven</td><td>^=3.3.0</td><td>http://maven.apache.org</td></tr>
-<tr><td>MySQL</td><td>5.7</td><td>https://www.mysql.com</td></tr>
-<tr><td>PostgreSQL</td><td>11</td><td>https://www.postgresql.org</td></tr>
-<tr><td>RabbitMQ</td><td>3.8.9</td><td>http://www.rabbitmq.com</td></tr>
-<tr><td>Nginx</td><td>1.18.0</td><td>http://nginx.org</td></tr>
-<tr><td>Redis</td><td>5.0.10</td><td>https://redis.io</td></tr>
+<tr><td>Debian</td><td>buster</td><td><a href="https://debian.org">https://debian.org</a></td></tr>
+<tr><td>VirtualBox</td><td>6.1</td><td><a href="https://www.virtualbox.org">https://www.virtualbox.org</a></td></tr>
+<tr><td>Eclipse</td><td>2020-12 (4.18.0)</td><td><a href="https://eclipse.org">https://eclipse.org</a></td></tr>
+<tr><td>Vscode</td><td>1.52</td><td><a href="https://code.visualstudio.com">https://code.visualstudio.com</a></td></tr>
+<tr><td>AdoptOpenJDK</td><td>hotspot_8u275b01</td><td><a href="https://github.com/AdoptOpenJDK">https://github.com/AdoptOpenJDK</a></td></tr>
+<tr><td>Node.js</td><td>^=14.15.1</td><td><a href="http://nodejs.org">http://nodejs.org</a></td></tr>
+<tr><td>Maven</td><td>^=3.3.0</td><td><a href="http://maven.apache.org">http://maven.apache.org</a></td></tr>
+<tr><td>MySQL</td><td>5.7</td><td><a href="https://www.mysql.com">https://www.mysql.com</a></td></tr>
+<tr><td>PostgreSQL</td><td>11</td><td><a href="https://www.postgresql.org">https://www.postgresql.org</a></td></tr>
+<tr><td>RabbitMQ</td><td>3.8.9</td><td><a href="http://www.rabbitmq.com">http://www.rabbitmq.com</a></td></tr>
+<tr><td>Nginx</td><td>1.18.0</td><td><a href="http://nginx.org">http://nginx.org</a></td></tr>
+<tr><td>Redis</td><td>5.0.10</td><td><a href="https://redis.io">https://redis.io</a></td></tr>
 </tbody></table>
 
                     </main>
