--- a/import-mysql.html
+++ b/import-mysql.html
@@ -164,6 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#创建数据库" id="创建数据库">创建数据库</a></h1>
+<h2><a class="header" href="#create-database" id="create-database">create-database</a></h2>
 <pre><code class="language-sql">-- mysql5.7
 CREATE DATABASE `mhgoi_blog` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
 -- mysql8
@@ -174,11 +175,13 @@ CREATE USER 'jack'@'%' IDENTIFIED BY '666666';
 GRANT ALL PRIVILEGES ON *.* TO 'jack'@'%';
 FLUSH PRIVILEGES;
 </code></pre>
+<h2><a class="header" href="#mysql57-schema-and-data" id="mysql57-schema-and-data">mysql5.7-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>mysql5.7</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql</a></td></tr>
 <tr><td>mysql5.7</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql</a></td></tr>
 <tr><td>mysql5.7</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql</a></td></tr>
 </tbody></table>
+<h2><a class="header" href="#mysql8-schema-and-data" id="mysql8-schema-and-data">mysql8-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>mysql8</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql</a></td></tr>
 <tr><td>mysql8</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql</a></td></tr>
