--- a/import-postgres.html
+++ b/import-postgres.html
@@ -164,6 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#创建数据库" id="创建数据库">创建数据库</a></h1>
+<h2><a class="header" href="#create-database" id="create-database">create-database</a></h2>
 <pre><code class="language-sql">-- create database
 create database mhgoi_blog with encoding='utf8';
 
@@ -181,11 +182,13 @@ GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public to jack;
 GRANT ALL PRIVILEGES ON ALL FUNCTIONS IN SCHEMA public to jack;
 
 </code></pre>
+<h2><a class="header" href="#postgres11-schema-and-data" id="postgres11-schema-and-data">postgres11-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>postgres11</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg11.sql</a></td></tr>
 <tr><td>postgres11</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg11.sql</a></td></tr>
 <tr><td>postgres11</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-pg11.sql</a></td></tr>
 </tbody></table>
+<h2><a class="header" href="#postgres12-schema-and-data" id="postgres12-schema-and-data">postgres12-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>postgres12</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg12.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg12.sql</a></td></tr>
 <tr><td>postgres12</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg12.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg12.sql</a></td></tr>
