--- a/print.html
+++ b/print.html
@@ -165,16 +165,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#唔该博客" id="唔该博客">唔该博客</a></h2>
+                        <h1><a class="header" href="#唔该博客" id="唔该博客">唔该博客</a></h1>
+<h2><a class="header" href="#简介" id="简介">简介</a></h2>
 <p>唔该博客，一个前后端分离的博客系统。</p>
-<img src="https://img.shields.io/badge/License-GPLv3-blue.svg" />
-<img src="https://img.shields.io/badge/springboot-2.3.9.RELEASE-green">
-<img src="https://img.shields.io/badge/vue-%5E%3D2.6.11-blue" />
+<p><img src="https://img.shields.io/badge/License-GPLv3-blue.svg" alt="License-GPLv3-blue" />
+<img src="https://img.shields.io/badge/springboot-2.3.9.RELEASE-green" alt="springboot-2.3.9.RELEASE-green" />
+<img src="https://img.shields.io/badge/vue-%5E%3D2.6.11-blue" alt="vue-%5E%3D2.6.11-blue" /></p>
 <h2><a class="header" href="#项目仓库" id="项目仓库">项目仓库</a></h2>
 <p><a href="https://github.com/dyrnq/mhgoi-blog"><img src="./img/github-logo-1.png" alt="github" title="github" /></a></p>
 <p><a href="https://github.com/dyrnq/mhgoi-blog">https://github.com/dyrnq/mhgoi-blog</a></p>
 <p><a href="https://gitee.com/dyrnq/mhgoi-blog"><img src="./img/gitee.svg" alt="gitee" title="gitee" /></a></p>
 <p><a href="https://gitee.com/dyrnq/mhgoi-blog">https://gitee.com/dyrnq/mhgoi-blog</a></p>
+<h2><a class="header" href="#文档地址" id="文档地址">文档地址</a></h2>
+<ul>
+<li><a href="https://dyrnq.github.io/doc.mhgoi.net/">https://dyrnq.github.io/doc.mhgoi.net/</a></li>
+<li><a href="https://dyrnq.gitee.io/doc.mhgoi.net/">https://dyrnq.gitee.io/doc.mhgoi.net/</a></li>
+<li><a href="https://doc.mhgoi.net">https://doc.mhgoi.net</a></li>
+<li><a href="https://github.com/dyrnq/doc.mhgoi.net">https://github.com/dyrnq/doc.mhgoi.net</a></li>
+</ul>
 <h1><a class="header" href="#软件特色" id="软件特色">软件特色</a></h1>
 <ul>
 <li>多数据库支持,支持mysql、mariadb、postgresql</li>
@@ -231,20 +239,21 @@
 <tr><td>showdown</td><td>用Javascript编写的Markdown 到Html转换器</td><td><a href="https://github.com/showdownjs/showdown">https://github.com/showdownjs/showdown</a></td></tr>
 <tr><td>turndown</td><td>用JavaScript编写的HTML到Markdown转换器</td><td><a href="https://github.com/domchristie/turndown">https://github.com/domchristie/turndown</a></td></tr>
 </tbody></table>
+<h1><a class="header" href="#dev" id="dev">dev</a></h1>
 <h1><a class="header" href="#环境搭建" id="环境搭建">环境搭建</a></h1>
 <table><thead><tr><th>工具</th><th>说明</th><th>官网</th></tr></thead><tbody>
-<tr><td>Debian</td><td>buster</td><td>https://debian.org</td></tr>
-<tr><td>VirtualBox</td><td>6.1</td><td>https://www.virtualbox.org</td></tr>
-<tr><td>Eclipse</td><td>2020-12 (4.18.0)</td><td>https://eclipse.org</td></tr>
-<tr><td>Vscode</td><td>1.52</td><td>https://code.visualstudio.com</td></tr>
-<tr><td>AdoptOpenJDK</td><td>hotspot_8u275b01</td><td>https://github.com/AdoptOpenJDK</td></tr>
-<tr><td>Node.js</td><td>^=14.15.1</td><td>http://nodejs.org</td></tr>
-<tr><td>Maven</td><td>^=3.3.0</td><td>http://maven.apache.org</td></tr>
-<tr><td>MySQL</td><td>5.7</td><td>https://www.mysql.com</td></tr>
-<tr><td>PostgreSQL</td><td>11</td><td>https://www.postgresql.org</td></tr>
-<tr><td>RabbitMQ</td><td>3.8.9</td><td>http://www.rabbitmq.com</td></tr>
-<tr><td>Nginx</td><td>1.18.0</td><td>http://nginx.org</td></tr>
-<tr><td>Redis</td><td>5.0.10</td><td>https://redis.io</td></tr>
+<tr><td>Debian</td><td>buster</td><td><a href="https://debian.org">https://debian.org</a></td></tr>
+<tr><td>VirtualBox</td><td>6.1</td><td><a href="https://www.virtualbox.org">https://www.virtualbox.org</a></td></tr>
+<tr><td>Eclipse</td><td>2020-12 (4.18.0)</td><td><a href="https://eclipse.org">https://eclipse.org</a></td></tr>
+<tr><td>Vscode</td><td>1.52</td><td><a href="https://code.visualstudio.com">https://code.visualstudio.com</a></td></tr>
+<tr><td>AdoptOpenJDK</td><td>hotspot_8u275b01</td><td><a href="https://github.com/AdoptOpenJDK">https://github.com/AdoptOpenJDK</a></td></tr>
+<tr><td>Node.js</td><td>^=14.15.1</td><td><a href="http://nodejs.org">http://nodejs.org</a></td></tr>
+<tr><td>Maven</td><td>^=3.3.0</td><td><a href="http://maven.apache.org">http://maven.apache.org</a></td></tr>
+<tr><td>MySQL</td><td>5.7</td><td><a href="https://www.mysql.com">https://www.mysql.com</a></td></tr>
+<tr><td>PostgreSQL</td><td>11</td><td><a href="https://www.postgresql.org">https://www.postgresql.org</a></td></tr>
+<tr><td>RabbitMQ</td><td>3.8.9</td><td><a href="http://www.rabbitmq.com">http://www.rabbitmq.com</a></td></tr>
+<tr><td>Nginx</td><td>1.18.0</td><td><a href="http://nginx.org">http://nginx.org</a></td></tr>
+<tr><td>Redis</td><td>5.0.10</td><td><a href="https://redis.io">https://redis.io</a></td></tr>
 </tbody></table>
 <h1><a class="header" href="#adoptopenjdk" id="adoptopenjdk">AdoptOpenJDK</a></h1>
 <p>从<a href="https://adoptopenjdk.net/">https://adoptopenjdk.net/</a>下载AdoptOpenJDK。也可以从清华TUNA镜像下载，根据自己的平台选择下载jdk</p>
@@ -309,7 +318,7 @@ OS name: &quot;linux&quot;, version: &quot;4.19.0-13-amd64&quot;, arch: &quot;am
 <p>Visual Studio Code是一个轻量级但功能强大的源代码编辑器，可在您的桌面上运行，并且可用于Windows，macOS和Linux。</p>
 <p><a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a></p>
 <h2><a class="header" href="#推荐插件" id="推荐插件">推荐插件</a></h2>
-<p>Beautify、Docker、Vetur</p>
+<p>Beautify、Docker、Vetur、markdownlint、ShellCheck</p>
 <h1><a class="header" href="#git" id="git">Git</a></h1>
 <h2><a class="header" href="#git-1" id="git-1">git</a></h2>
 <pre><code class="language-bash"># debian ubuntu
@@ -356,7 +365,7 @@ npm cache clean -f
 <p>VirtualBox是功能强大的x86和AMD64 / Intel64虚拟化产品，适用于企业和家庭使用。VirtualBox不仅是面向企业客户的功能极为丰富的高性能产品，而且还是根据GNU通用公共许可证（GPL）版本2的条款可作为开源软件免费提供的唯一专业解决方案。</p>
 <h2><a class="header" href="#install" id="install">install</a></h2>
 <blockquote>
-<p>https://www.virtualbox.org/</p>
+<p>For more information, see <a href="https://www.virtualbox.org/">https://www.virtualbox.org/</a></p>
 </blockquote>
 <h2><a class="header" href="#ref" id="ref">ref</a></h2>
 <ul>
@@ -691,6 +700,7 @@ redis:5.0.10
 adminer:4.8.0
 </code></pre>
 <h1><a class="header" href="#创建数据库" id="创建数据库">创建数据库</a></h1>
+<h2><a class="header" href="#create-database" id="create-database">create-database</a></h2>
 <pre><code class="language-sql">-- mysql5.7
 CREATE DATABASE `mhgoi_blog` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
 -- mysql8
@@ -701,17 +711,20 @@ CREATE USER 'jack'@'%' IDENTIFIED BY '666666';
 GRANT ALL PRIVILEGES ON *.* TO 'jack'@'%';
 FLUSH PRIVILEGES;
 </code></pre>
+<h2><a class="header" href="#mysql57-schema-and-data" id="mysql57-schema-and-data">mysql5.7-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>mysql5.7</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql</a></td></tr>
 <tr><td>mysql5.7</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql</a></td></tr>
 <tr><td>mysql5.7</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql</a></td></tr>
 </tbody></table>
+<h2><a class="header" href="#mysql8-schema-and-data" id="mysql8-schema-and-data">mysql8-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>mysql8</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql</a></td></tr>
 <tr><td>mysql8</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql</a></td></tr>
 <tr><td>mysql8</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql8.sql</a></td></tr>
 </tbody></table>
 <h1><a class="header" href="#创建数据库-1" id="创建数据库-1">创建数据库</a></h1>
+<h2><a class="header" href="#create-database-1" id="create-database-1">create-database</a></h2>
 <pre><code class="language-sql">-- create database
 create database mhgoi_blog with encoding='utf8';
 
@@ -729,11 +742,13 @@ GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public to jack;
 GRANT ALL PRIVILEGES ON ALL FUNCTIONS IN SCHEMA public to jack;
 
 </code></pre>
+<h2><a class="header" href="#postgres11-schema-and-data" id="postgres11-schema-and-data">postgres11-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>postgres11</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg11.sql</a></td></tr>
 <tr><td>postgres11</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg11.sql</a></td></tr>
 <tr><td>postgres11</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-pg11.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-pg11.sql</a></td></tr>
 </tbody></table>
+<h2><a class="header" href="#postgres12-schema-and-data" id="postgres12-schema-and-data">postgres12-schema-and-data</a></h2>
 <table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
 <tr><td>postgres12</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg12.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-schema-pg12.sql</a></td></tr>
 <tr><td>postgres12</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg12.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/postgres/postgres-data-pg12.sql</a></td></tr>
@@ -1113,17 +1128,17 @@ upstream artalkserverphp {
 <h1><a class="header" href="#致谢" id="致谢">致谢</a></h1>
 <p><code>唔该博客</code>参考了很多优秀的开源项目，开源不易，感谢分享!</p>
 <table><thead><tr><th>作者</th><th>项目</th><th>官网</th></tr></thead><tbody>
-<tr><td>fengziy</td><td>Gblog</td><td>https://gitee.com/fengziy/Gblog</td></tr>
-<tr><td>zeyili</td><td>blog-li</td><td>https://gitee.com/zeyili/blog-li</td></tr>
-<tr><td>PanJiaChen</td><td>vue-element-admin</td><td>https://github.com/PanJiaChen/vue-element-admin</td></tr>
-<tr><td>苞米豆</td><td>Mybatis-plus</td><td>http://mp.baomidou.com/</td></tr>
-<tr><td>yadong.zhang</td><td>JustAuth</td><td>https://gitee.com/yadong.zhang/JustAuth</td></tr>
-<tr><td>bihell</td><td>Dice</td><td>https://github.com/bihell/Dice</td></tr>
-<tr><td>pppercyWang</td><td>vue-emoji-comment</td><td>https://github.com/pppercyWang/vue-emoji-comment</td></tr>
-<tr><td>若依</td><td>RuoYi</td><td>https://gitee.com/y_project/RuoYi</td></tr>
-<tr><td>yaowei9363</td><td>vue-side-catalog</td><td>https://github.com/yaowei9363/vue-side-catalog</td></tr>
-<tr><td>奇文社区</td><td>奇文网盘</td><td>https://gitee.com/qiwen-cloud/qiwen-file</td></tr>
-<tr><td>weilanwl</td><td>ColorUI</td><td>https://github.com/weilanwl/ColorUI</td></tr>
+<tr><td>fengziy</td><td>Gblog</td><td><a href="https://gitee.com/fengziy/Gblog">https://gitee.com/fengziy/Gblog</a></td></tr>
+<tr><td>zeyili</td><td>blog-li</td><td><a href="https://gitee.com/zeyili/blog-li">https://gitee.com/zeyili/blog-li</a></td></tr>
+<tr><td>PanJiaChen</td><td>vue-element-admin</td><td><a href="https://github.com/PanJiaChen/vue-element-admin">https://github.com/PanJiaChen/vue-element-admin</a></td></tr>
+<tr><td>苞米豆</td><td>Mybatis-plus</td><td><a href="http://mp.baomidou.com/">http://mp.baomidou.com/</a></td></tr>
+<tr><td>yadong.zhang</td><td>JustAuth</td><td><a href="https://gitee.com/yadong.zhang/JustAuth">https://gitee.com/yadong.zhang/JustAuth</a></td></tr>
+<tr><td>bihell</td><td>Dice</td><td><a href="https://github.com/bihell/Dice">https://github.com/bihell/Dice</a></td></tr>
+<tr><td>pppercyWang</td><td>vue-emoji-comment</td><td><a href="https://github.com/pppercyWang/vue-emoji-comment">https://github.com/pppercyWang/vue-emoji-comment</a></td></tr>
+<tr><td>若依</td><td>RuoYi</td><td><a href="https://gitee.com/y_project/RuoYi">https://gitee.com/y_project/RuoYi</a></td></tr>
+<tr><td>yaowei9363</td><td>vue-side-catalog</td><td><a href="https://github.com/yaowei9363/vue-side-catalog">https://github.com/yaowei9363/vue-side-catalog</a></td></tr>
+<tr><td>奇文社区</td><td>奇文网盘</td><td><a href="https://gitee.com/qiwen-cloud/qiwen-file">https://gitee.com/qiwen-cloud/qiwen-file</a></td></tr>
+<tr><td>weilanwl</td><td>ColorUI</td><td><a href="https://github.com/weilanwl/ColorUI">https://github.com/weilanwl/ColorUI</a></td></tr>
 </tbody></table>
 <h1><a class="header" href="#关注交流" id="关注交流">关注&amp;交流</a></h1>
 <p>为了方便小伙伴们沟通交流，我创建了QQ群792063225 (<strong>加群备注</strong>： <code>唔该博客</code> )，目前项目还存在很多不足之处，欢迎各位老哥进群进行技术交流，谢谢~</p>
