--- a/dev-install-vscode.html
+++ b/dev-install-vscode.html
@@ -168,7 +168,7 @@
 <p>Visual Studio Code是一个轻量级但功能强大的源代码编辑器，可在您的桌面上运行，并且可用于Windows，macOS和Linux。</p>
 <p><a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a></p>
 <h2><a class="header" href="#推荐插件" id="推荐插件">推荐插件</a></h2>
-<p>Beautify、Docker、Vetur</p>
+<p>Beautify、Docker、Vetur、markdownlint、ShellCheck</p>
 
                     </main>
 
