--- a/index.html
+++ b/index.html
@@ -163,16 +163,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#唔该博客" id="唔该博客">唔该博客</a></h2>
+                        <h1><a class="header" href="#唔该博客" id="唔该博客">唔该博客</a></h1>
+<h2><a class="header" href="#简介" id="简介">简介</a></h2>
 <p>唔该博客，一个前后端分离的博客系统。</p>
-<img src="https://img.shields.io/badge/License-GPLv3-blue.svg" />
-<img src="https://img.shields.io/badge/springboot-2.3.9.RELEASE-green">
-<img src="https://img.shields.io/badge/vue-%5E%3D2.6.11-blue" />
+<p><img src="https://img.shields.io/badge/License-GPLv3-blue.svg" alt="License-GPLv3-blue" />
+<img src="https://img.shields.io/badge/springboot-2.3.9.RELEASE-green" alt="springboot-2.3.9.RELEASE-green" />
+<img src="https://img.shields.io/badge/vue-%5E%3D2.6.11-blue" alt="vue-%5E%3D2.6.11-blue" /></p>
 <h2><a class="header" href="#项目仓库" id="项目仓库">项目仓库</a></h2>
 <p><a href="https://github.com/dyrnq/mhgoi-blog"><img src="./img/github-logo-1.png" alt="github" title="github" /></a></p>
 <p><a href="https://github.com/dyrnq/mhgoi-blog">https://github.com/dyrnq/mhgoi-blog</a></p>
 <p><a href="https://gitee.com/dyrnq/mhgoi-blog"><img src="./img/gitee.svg" alt="gitee" title="gitee" /></a></p>
 <p><a href="https://gitee.com/dyrnq/mhgoi-blog">https://gitee.com/dyrnq/mhgoi-blog</a></p>
+<h2><a class="header" href="#文档地址" id="文档地址">文档地址</a></h2>
+<ul>
+<li><a href="https://dyrnq.github.io/doc.mhgoi.net/">https://dyrnq.github.io/doc.mhgoi.net/</a></li>
+<li><a href="https://dyrnq.gitee.io/doc.mhgoi.net/">https://dyrnq.gitee.io/doc.mhgoi.net/</a></li>
+<li><a href="https://doc.mhgoi.net">https://doc.mhgoi.net</a></li>
+<li><a href="https://github.com/dyrnq/doc.mhgoi.net">https://github.com/dyrnq/doc.mhgoi.net</a></li>
+</ul>
 
                     </main>
 
