deploy: 7af70db32bf4b3aebe77ff2ea6ad746562f03fca

--- a/dev-backend.html
+++ b/dev-backend.html
@@ -165,7 +165,7 @@
                     <main>
                         <h1><a class="header" href="#后端代码" id="后端代码">后端代码</a></h1>
 <h2><a class="header" href="#下载代码" id="下载代码">下载代码</a></h2>
-<pre><code class="language-bash">git clone http://github.com/dyrnq/mhgoi-blog
+<pre><code class="language-bash">git clone https://github.com/dyrnq/mhgoi-blog.git
 </code></pre>
 <h2><a class="header" href="#eclipse导入项目" id="eclipse导入项目">Eclipse导入项目</a></h2>
 <p><img src="img/import.png" alt="import" /></p>
