--- a/dev-frontend-web.html
+++ b/dev-frontend-web.html
@@ -165,13 +165,13 @@
                     <main>
                         <h1><a class="header" href="#前端代码web" id="前端代码web">前端代码web</a></h1>
 <h2><a class="header" href="#下载代码" id="下载代码">下载代码</a></h2>
-<pre><code class="language-bash">git clone http://github.com/dyrnq/mhgoi-blog
+<pre><code class="language-bash">git clone https://github.com/dyrnq/mhgoi-blog.git
 </code></pre>
 <h2><a class="header" href="#运行" id="运行">运行</a></h2>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/web
 
-# 只需运行一次 run install
-npm run install
+# 只需运行一次 npm install
+npm install
 
 npm run dev
 </code></pre>
