--- a/dev-install-eclipse.html
+++ b/dev-install-eclipse.html
@@ -174,6 +174,10 @@
 </code></pre>
 <p><img src="./img/install-lombok.png" alt="install-lombok" /></p>
 <p>如果提示<code>Can't find IDE</code>,则需要选择手工选择Eclipse的安装路径(上图的Specify location)，再点击install！</p>
+<pre><code class="language-bash">wget https://projectlombok.org/downloads/lombok.jar
+
+echo &quot;-javaagent:$(pwd)/lombok.jar&quot; &gt;&gt; eclipse.ini
+</code></pre>
 <h2><a class="header" href="#配置maven" id="配置maven">配置maven</a></h2>
 <p>这一步是统一命令行(shell)中使用mvn和Eclipse中maven使用相同的设置</p>
 <p><img src="./img/eclipse-maven.png" alt="eclipse-maven" /></p>
